# e2k

./: .gitignore  CRITICAL_BUG_FIX_HOLES_DRILLS.md  CRITICAL_BUG_FIX_TRACK.md  Cargo.toml  FEATURE_COMPARISON_REPORT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  check_pad.sh  test_api.sh  test_shapes.sh  test_summary.txt
.github/workflows/: release.yml
src/: cli.rs  library.rs  main.rs
src/easyeda/: api.rs  importer.rs  models.rs
src/kicad/: footprint.rs  footprint_exporter.rs  mod.rs  model_exporter.rs  symbol_exporter.rs
