[package]
name = "e2k"
version = "0.1.0"
edition = "2024"
authors = ["linkyourbin"]
description = "Convert EasyEDA/LCSC components to KiCad library formats"
license = "MIT"

[lib]
name = "e2k"
path = "src/lib.rs"

[[bin]]
name = "e2k"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
thiserror = "2.0.18"
anyhow = "1.0.101"
log = "0.4.29"
env_logger = "0.11.8"

[dev-dependencies]
mockito = "1.7.2"
